@@ -48,7 +48,7 @@ VARx(ev_tstamp, timeout_blocktime)
 
 VARx(int, backend)
 VARx(int, activecnt) /* total number of active events ("refcount") */
-VARx(char, loop_done)  /* signal by ev_unloop */
+VARx(unsigned char, loop_done)  /* signal by ev_unloop */
 
 VARx(int, backend_fd)
 VARx(ev_tstamp, backend_fudge) /* assumed typical timer resolution */
@@ -166,16 +166,13 @@ VARx(char, fs_2625) /* whether we are running in linux 2.6.25 or newer */
 VAR (fs_hash, ANFS fs_hash [EV_INOTIFY_HASHSIZE])
 #endif
 
-#if EV_MINIMAL < 2
+#if EV_MINIMAL < 2 || EV_GENWRAP
 VARx(unsigned int, loop_count) /* total number of loop iterations/blocks */
 VARx(unsigned int, loop_depth) /* #ev_loop enters - #ev_loop leaves */
 
 VARx(void *, userdata)
-#endif
-
-#if EV_MINIMAL < 2
-VAR (suspend_cb, void (*suspend_cb)(EV_P))
-VAR (resume_cb , void (*resume_cb) (EV_P))
+VAR (release_cb, void (*release_cb)(EV_P))
+VAR (acquire_cb, void (*acquire_cb)(EV_P))
 VAR (invoke_cb , void (*invoke_cb) (EV_P))
 #endif
 
